<resources>
    <string name="app_name">TechieTalks</string>

    <!-- MENU APP -->
    <string name="menu">Menu</string>
    <string name="nav_home">Home</string>
    <string name="nav_account">My Account</string>
    <string name="nav_login">Login</string>
    <string name="nav_register">Register</string>
    <string name="section_post">Manage Publication</string>
    <string name="nav_create_post">Create Publication</string>
    <string name="nav_table_post">Handle Publications</string>
    <string name="section_admin">Administration</string>
    <string name="nav_create_tag">Create tag</string>
    <string name="nav_table_tag">Handle tags</string>
    <string name="nav_table_user">Handle users</string>
    <string name="section_options">Settings and privacy</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_legal">Terms and Privacy</string>

    <string name="nav_drawer_open">Open navigation</string>
    <string name="nav_drawer_close">Close navigation</string>

    <!-- CONTENT DESCRIPTION -->
    <string name="logo_content_description">TechieTalks logo image</string>

    <!-- LOADINGS -->
    <string name="loading_data_attempt">Loading data, attempt %1$d of %2$d</string>
    <string name="loading_credentials_attempt">Validating credentials, attempt %1$d of %2$d</string>
    <string name="loading_adding_publication">Creating publication, attempt %1$d of %2$d</string>
    <string name="loading_updating_publication">Updating publication, attempt %1$d of %2$d</string>
    <string name="loading_deleting_publication">Deleting publication: %1$s</string>
    <string name="loading_adding_tag">Creating tag, attempt %1$d of %2$d</string>
    <string name="loading_updating_tag">Updating tag, attempt %1$d of %2$d</string>
    <string name="loading_deleting_tag">Deleting tag: %1$s</string>
    <string name="loading_deleting_user">Deleting user: %1$s</string>
    <string name="loading_updating_roles">Updating roles, attempt %1$d of %2$d</string>
    <string name="loading_data">Loading data...</string>

    <!-- ERRORS -->
    <string name="unknown_error">Unknown error while fetching data</string>
    <string name="general_error">General error response message</string>
    <string name="general_response">General correct response message</string>
    <string name="general_timeout">Request timed out. Server no response.</string>

    <!-- MY ACCOUNT-->
    <string name="username_label">Username: %1$s</string>
    <string name="name_label">Name: %1$s</string>
    <string name="roles_label">Roles: %1$s</string>
    <string name="btn_delete_profile">Delete account</string>
    <string name="btn_edit_profile">Edit profile</string>
    <string name="btn_update_roles_profile">Update roles</string>
    <!-- LOGIN -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="switch_to_register">Don\'t have an account? Create account</string>
    <string name="switch_to_login">Already have an account? Log in</string>
    <string name="auth_loading_msg">Validating credentials</string>
    <string name="error_login_credentials">Error, login credentials are invalid</string>
    <string name="login_successfully">Login successfully</string>
    <string name="btn_logout">Logout</string>
    <!-- REGISTER-->
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="register_user_loading_msg">Creating account, attempt %1$d of %2$d</string>
    <string name="register"> Register</string>
    <string name="accept_terms_use"> I accept the terms of use.</string>
    <string name="toast_successfully_register">Account successfully registered!</string>
    <string name="hello_blank_fragment"> hello_blank_fragment</string>
    <!-- REGISTER ERRORS -->
    <string name="error_empty_username">Username is required.</string>
    <string name="error_empty_name">Name is required.</string>
    <string name="error_empty_password">Password is required.</string>
    <string name="error_empty_confirm_password">Password confirmation is required.</string>
    <string name="error_password_mismatch">Passwords do not match.</string>
    <string name="error_terms_unchecked">You must accept the terms of use.</string>
    <!-- LOGOUT -->
    <string name="message_logout_success">Successfully logged out.</string>

    <!-- OPTIONS -->
    <string name="options_title">Options menu</string>
    <string name="save_preferences">Save preferences</string>
    <string name="select_language">Select Language</string>
    <string name="select_theme">Select Theme</string>
    <string-array name="language_options">
        <item>Device Default</item>
        <item>English</item>
        <item>Español</item>
    </string-array>
    <string-array name="theme_options">
        <item>Device Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <!-- UPDATING USER DETAILS -->
    <string name="profile_update_info">This is where you can update your contact details, %1$s. You can modify your name and password.</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="updating_user_loading_msg">Updating user data...</string>
    <string name="btn_update_user">Update profile</string>
    <string name="toast_successfully_updated">User details updated successfully</string>

    <!-- INDEX PAGE -->
    <string name="title_index"> Latest publications</string>
    <string name="comments_section">Comment Section</string>
    <string name="example_publication_text">Lorem ipsum odor amet, consectetuemus viverra hac condimentum purus. Lorem ipsum odor amet, consectetuemus viverra hac</string>

    <!-- COMMENTS -->
    <string name="loading_comments">Loading comments, attempt %1$d of %2$d</string>
    <string name="updating_comment">Adding new comment, attempt %1$d of %2$d</string>>
    <string name="load_reply_comments">Load %1$d replies.</string>
    <string name="comment_hint">Write new comment...</string>
    <string name="add_comment">Add</string>

    <!-- EDITOR SECTION-->
    <string name="handle_post">Handle all publications</string>

    <!-- POST-->
    <string name="new_post">Add a new Post</string>
    <string name="save_post">Save Post</string>
    <string name="post_title">Title</string>
    <string name="post_content">Content</string>
    <string name="delete_publication">Delete publication</string>
    <string name="message_confirm_delete_publication">¿Are you sure that you want to delete this Publication: %1$s?</string>
    <string name="delete_publication_confirm">Publication was successfully removed</string>
    <string name="delete_publication_error">There was a problem deleting publication</string>

    <!-- TAG SELECTOR-->
    <string name="select_tags">Select tags</string>
    <string name="selected_tags">Selected tags:</string>

    <!-- TAG SECTION -->
    <string name="handle_tag"> Handle all tags</string>
    <string name="title_add_tag"> Add a new Tag</string>
    <string name="nametag_title">Nametag title</string>
    <string name="btn_add_tag">Add tag</string>
    <string name="title_update_tag">Update tag</string>
    <string name="tag_hint">Name tag</string>

    <!-- TAG-->
    <string name="delete_tag">Delete tag</string>
    <string name="success_add_tag">Tag successfully added.</string>
    <string name="updated_tag">Tag was successfully updated.</string>
    <string name="message_confirm_delete_tag">¿Are you sure that you want to delete this Tag: %1$s?</string>
    <string name="delete_tag_confirm">Tag was successfully removed.</string>
    <string name="delete_tag_error">There was a problem deleting tag.</string>

    <!-- USERS SECTION-->
    <string name="handle_user">Handle all users</string>
    <string name="delete_user"> Delete user</string>
    <string name="message_confirm_delete_user">¿Are you sure that you want to delete this user: %1$s?</string>
    <string name="delete_user_confirm">User was successfully removed.</string>
    <string name="delete_user_error">There was a problem deleting user.</string>
    <string name="error_loading_users">Error while getting users data.</string>

    <!-- ROLE SELECTOR -->
    <string name="select_roles">Select roles</string>

    <!-- TERMS AND PRIVACY -->
    <string name="privacy_text">
        <![CDATA[
        <b>Terms of Service and Privacy Policy</b><br/><br/>
        Effective Date: 04/12/2024<br/><br/>
        <b>1. Terms of Service</b><br/>
        Welcome to TechieTalks! By using our app, you agree to comply with these terms. Please read them carefully.<br/>
        - You must be at least 13 years old to use this app.<br/>
        - You are responsible for maintaining the confidentiality of your account information.<br/>
        - You agree not to use the app for illegal or unauthorized purposes.<br/><br/>
        We reserve the right to modify these terms at any time. Continued use of the app constitutes acceptance of the updated terms.<br/><br/>
        <b>2. Privacy Policy</b><br/>
        TechieTalks respects your privacy and is committed to protecting your personal data. This policy explains how we collect, use, and share information.<br/>
        - <b>Information Collection:</b> We may collect personal information such as your name, email address, and usage data.<br/>
        - <b>Usage of Data:</b> Your data is used to provide and improve our services, personalize your experience, and communicate with you.<br/>
        - <b>Third-Party Sharing:</b> We do not sell your personal data. However, we may share it with third-party providers to support the functionality of the app.<br/>
        - <b>Data Security:</b> We implement reasonable measures to protect your data. However, no method of transmission over the internet is completely secure.<br/><br/>
        <b>3. User Rights</b><br/>
        - You have the right to access, update, or delete your personal data.<br/>
        - You may opt out of receiving promotional communications.<br/><br/>
        <b>4. Contact Us</b><br/>
        If you have any questions or concerns about these terms or our privacy policy, please contact us at techietalks@support.es.<br/><br/>
        By using TechieTalks, you agree to these Terms of Service and Privacy Policy.
        ]]>
    </string>

</resources>