<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SectionLayoutStyle">

        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/options_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:paddingBottom="8dp" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_theme"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <Spinner
            android:id="@+id/theme_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/save_preferences" />

</LinearLayout>
