<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/form_background"
        android:elevation="6dp"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:hint="@string/username"
            android:textColor="@color/dark_blue"
            android:inputType="textPersonName"
            android:textColorHint="@color/light_green"
            android:padding="16dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/dark_blue"
            android:hint="@string/password"
            android:textColorHint="@color/light_green"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/loginErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/error_login_credentials"
                android:textColor="@color/red_error"
                android:textSize="15sp"
                android:visibility="gone" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/main_button"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Barra de carga y mensaje de validación -->
    <LinearLayout
        android:id="@+id/loginLoader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:visibility="gone">

        <ProgressBar
            android:indeterminateTint="@color/title_text"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/loadingMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/auth_loading_msg"
            android:textColor="@color/title_text"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
