<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SectionLayoutStyle"
    tools:context=".fragments.SectionUpdateTagFragment">

    <TextView
        style="@style/TitleTextStyle"
        android:text="@string/title_update_tag"/>

    <LinearLayout
        android:id="@+id/formUpdateTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/form_background"
        android:elevation="6dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tagname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:hint="@string/tag_hint"
            android:inputType="text|textShortMessage"
            android:padding="16dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/light_green"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editTagSuccess"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/editTagError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/red_error"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEditTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_button"
            android:gravity="center"
            android:text="Update tag"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Barra de carga y mensaje de validación -->
    <LinearLayout
        android:id="@+id/loaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:indeterminateTint="@color/content_text" />

        <TextView
            android:id="@+id/loadingMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/auth_loading_msg"
            android:textColor="@color/content_text"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>